--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,5 @@ version = "0.1.0"
 [deps]
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Toolips = "a47e2ad8-fcf7-417c-9746-32b9bdf220bd"
+[compat]
+julia = "1.6.2"
