--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,13 @@
 name = "ToolipsMarkdown"
 uuid = "33f7ff50-f2f2-41f0-8a96-482dce5c1514"
 authors = ["emmac <emmettgb@gmail.com>"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
+Highlights = "eafb193a-b7ab-5a9e-9068-77385905fa72"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Toolips = "a47e2ad8-fcf7-417c-9746-32b9bdf220bd"
+
 [compat]
-julia = "1.6.2"
 Toolips = "0.2"
+julia = "1.6.2"
