--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ToolipsMarkdown"
 uuid = "33f7ff50-f2f2-41f0-8a96-482dce5c1514"
 authors = ["emmac <emmettgb@gmail.com>"]
-version = "0.1.3"
+version = "0.1.4"
 
 [deps]
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
@@ -10,3 +10,4 @@ Toolips = "a47e2ad8-fcf7-417c-9746-32b9bdf220bd"
 [compat]
 Toolips = "0.2"
 julia = "1.6.2"
+Markdown = "1.0"
